<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.notetask.AddEditActivityFragment">


    <EditText
        android:id="@+id/addedit_name"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/hint_name_task"
        android:inputType="textPersonName"

        android:maxLength="64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addedit_description"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"

        android:hint="@string/hint_description_task"
        android:inputType="textLongMessage"
        android:maxLength="256"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addedit_name" />

    <EditText
        android:id="@+id/addedit_sortorder"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Order: sorts low to high"
        android:inputType="numberSigned"
        android:maxLength="9"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addedit_description"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/addedit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:text="@string/name_button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addedit_sortorder"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
